Activity 12/program/cpsysinfo/error.txt
make -C /lib/modules/6.8.0-51-generic/build M=/home/reisenx/Documents/act12/cpsysinfo modules
make[1]: Entering directory '/usr/src/linux-headers-6.8.0-51-generic'
warning: the compiler differs from the one used to build the kernel
  The kernel was built by: x86_64-linux-gnu-gcc-13 (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0
  You are using:           gcc-13 (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0
  CC [M]  /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.o
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c: In function ‘dev_open’:
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:77:71: error: implicit declaration of function ‘global_page_state’; did you mean ‘node_page_state’? [-Werror=implicit-function-declaration]
   77 |         unsigned long mem_available = TO_KB(i.freeram + i.bufferram + global_page_state(NR_FILE_PAGES));
      |                                                                       ^~~~~~~~~~~~~~~~~
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:28:24: note: in definition of macro ‘TO_KB’
   28 | #define TO_KB(pages) ((pages) * (PAGE_SIZE / 1024))
      |                        ^~~~~
cc1: some warnings being treated as errors
make[3]: *** [scripts/Makefile.build:243: /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.8.0-51-generic/Makefile:1925: /home/reisenx/Documents/act12/cpsysinfo] Error 2
make[1]: *** [Makefile:240: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.8.0-51-generic'
make: *** [Makefile:3: all] Error 2

